# NN

./: .clang-format  CMakeLists.txt  appveyor.yml
cmake/modules/: FindEGL.cmake  FindSTBI.cmake  Warnings.cmake
examples/: CMakeLists.txt  scenegraph.cpp  show_sprite.cpp
examples/shaders/: basic.vert
include/nn/2d/: debug.hpp  geometry.hpp  image.hpp  shader.hpp  shader_program.hpp  sprite.hpp  sprite_atlas.hpp  sprite_batch.hpp  sprite_renderer.hpp  sprite_sheet.hpp  texture.hpp  vertex.hpp
include/nn/ecs/: component.hpp  component_store.hpp  component_view.hpp  ecs_traits.hpp  entity.hpp  entity_handle.hpp  entity_manager.hpp  system.hpp  utility.hpp
include/nn/ecs/systems/: renderable2d_system.hpp  transform2d_system.hpp
include/nn/fs/: events.hpp  fs_monitor.hpp
include/nn/physics/: world.hpp
include/nn/render/: camera.hpp  geometry.hpp  image.hpp  mesh.hpp  shader.hpp  shader_program.hpp  texture.hpp  utility.hpp  vertex.hpp  vertex_traits.hpp  window.hpp
include/nn/render/2d/: orthographic_camera.hpp  packed_sprite.hpp  render_batch.hpp  renderable2d.hpp  renderer2d.hpp  sprite.hpp  sprite_atlas.hpp  sprite_batch.hpp  sprite_renderer.hpp  transform.hpp
include/nn/sg/: camera_node.hpp  entity_node.hpp  node.hpp  node2d.hpp  node_base.hpp  scene.hpp
include/nn/stl/: clip.hpp  movable_object_pool.hpp  pool_ptr.hpp  pop_vector.hpp  rectangle.hpp
samples/: CMakeLists.txt  show_sprite.cpp
samples/shaders/: basic.frag  basic.vert
src/nn/: CMakeLists.txt
src/nn/2d/: CMakeLists.txt  debug.cpp  image.cpp  shader.cpp  shader_program.cpp  sprite.cpp  sprite_atlas.cpp  sprite_batch.cpp  sprite_sheet.cpp  texture.cpp  vertex.cpp
src/nn/ecs/: entity.cpp
src/nn/fswatch/: CMakeLists.txt  fs_monitor.cpp
src/nn/render/: CMakeLists.txt  camera.cpp  debug.cpp  image.cpp  shader.cpp  shader_program.cpp  texture.cpp  utility.cpp  vertex.cpp
src/nn/render/2d/: orthographic_camera.cpp  packed_sprite.cpp  render_batch.cpp  renderable2d.cpp  renderer2d.cpp  sprite.cpp  sprite_atlas.cpp  sprite_batch.cpp  transform.cpp
src/nn/render/egl/: window.cpp
src/nn/sg/: CMakeLists.txt  node.cpp  node2d.cpp  node_base.cpp  scene.cpp
tests/: CMakeLists.txt  test_component_store.cpp  test_entity_manager.cpp  test_systems.cpp
